--- a/index.html
+++ b/index.html
@@ -2,48 +2,53 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Interactive rating component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="index.css">
 </head>
-<body>
-
-  <!-- Rating state start -->
-
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+<body class="body">
+  <header class="header">
+  </header>
+  <main class="main">
+    <div class="main__rating-container rating">
+      <div class="rating__img-container">
+        <img class="rating__img" src="images/icon-star.svg" alt="star">
+      </div>
+      <h1 class="rating__h1">How did we do?</h1>
+      <p class="rating__p">
+        Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!
+      </p>
+      <div class="rating__button-list-container button-list">
+        <button class="button-list__button">1</button>
+        <button class="button-list__button">2</button>
+        <button class="button-list__button">3</button>
+        <button class="button-list__button">4</button>
+        <button class="button-list__button">5</button>
+      </div>
+      <button type="submit" class="rating__submit">
+        SUBMIT
+      </button>
+    </div>
+    <div class="main__submit-container submit">
+      <div class="submit__img-container">
+        <img src="images/illustration-thank-you.svg" alt="ilustration thank you" class="submit__img">
+      </div>
+      <p class="submit__p--modifier">
+        You selected&nbsp;<span class="submit__span"></span>&nbsp;out of 5
+      </p>
+      <h2 class="submit__h2">Thank you!</h2>
+      <p class="submit__p">
+        We appreciate you taking the time to give a rating. If you ever need more support, 
+        don’t hesitate to get in touch!
+      </p>   
+    </div>
+  </main>
+  <footer class="footer">
+    <div class="footer__attribution">
+      Challenge by <a class="footer__a" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a class="footer__a" href="https://github.com/JairoAtoche" target="_blank">Jairo Atoche</a>.
+    </div>
+  </footer>  
 </body>
 </html>
