--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button class="button-list__button">4</button>
         <button class="button-list__button">5</button>
       </div>
-      <button type="submit" class="rating__submit">
+      <button type="submit" class="rating__submit" id="btn_submit">
         SUBMIT
       </button>
     </div>
@@ -50,5 +50,7 @@
       Coded by <a class="footer__a" href="https://github.com/JairoAtoche" target="_blank">Jairo Atoche</a>.
     </div>
   </footer>  
+  <script src="index.js">
+  </script>
 </body>
 </html>
