add cambio de estado a los botones

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="images/illustration-thank-you.svg" alt="ilustration thank you" class="submit__img">
       </div>
       <p class="submit__p--modifier">
-        You selected&nbsp;<span class="submit__span"></span>&nbsp;out of 5
+        You selected&nbsp;<span id="rating" class="submit__span"></span>&nbsp;out of 5
       </p>
       <h2 class="submit__h2">Thank you!</h2>
       <p class="submit__p">
